# CircuitPython_PIO_I2S

./: README.rst  i2scodec.py  i2sinout.py  pio_i2s.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: i2sinout_effect.py  i2sinout_input.py  i2sinout_output.py  i2sinout_peripheral.py  i2sinout_record.py  i2sinout_simpletest.py  pio_i2s_effect.py  pio_i2s_input.py  pio_i2s_output.py  pio_i2s_peripheral.py  pio_i2s_play.py  pio_i2s_record.py  pio_i2s_simpletest.py
