# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Cooper Dalrymple
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-i2sinout"
description = "Bidirectional I2S audio communication using PIO."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cooper Dalrymple", email = "me@dcdalrymple.com"}
]
urls = {Homepage = "https://github.com/relic-se/CircuitPython_I2SInOut"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "i2sinout",
    "i2s",
    "audio",
    "codec",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["i2sinout"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
